package com.vilin.bridge;

//接口
public interface Brand {
	void open();
	void close();
	void call();
}
