package com.vilin.bridge;

public class XiaoMi implements Brand {

	public void open() {
		// TODO Auto-generated method stub
		System.out.println("小米手机开机");
	}

	public void close() {
		// TODO Auto-generated method stub
		System.out.println("小米手机关机");
	}

	public void call() {
		// TODO Auto-generated method stub
		System.out.println("小米手机打电话");
	}

}
